chore: add opens params for newer twx versions