@@ -51,7 +51,24 @@ start_tomcat() {
         echo -e "${RED}Debugging is enabled and starting on ${WHITE_BG}${config_debugging_port}${NC}${NC}"
     fi
 
-    export CATALINA_OPTS="-server -Dfile.encoding=UTF-8 -Djava.library.path=webapps/Thingworx/WEB-INF/extensions -XX:+UseG1GC -Xms${config_config_minMemory} -Dport.http=${config_http_port} -Dport.https=${config_https_port} -Dhttps.keystorePassword=${config_https_keystorePassword} ${debugCommand} ${config_config_additionalParams}"
+    export CATALINA_OPTS="-server --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+        --add-opens=java.base/java.net=ALL-UNNAMED \
+        --add-opens=java.base/java.nio=ALL-UNNAMED \
+        --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED \
+        --add-opens=java.base/java.util.stream=ALL-UNNAMED \
+        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED \
+        --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED \
+        --add-opens=java.base/java.util.regex=ALL-UNNAMED \
+        --add-opens=java.base/java.time=ALL-UNNAMED \
+        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+        -Dfile.encoding=UTF-8 \
+        -Djava.library.path=webapps/Thingworx/WEB-INF/extensions \
+        -XX:+UseNUMA -XX:+UseG1GC -Xms${config_config_minMemory} \
+        -Dport.http=${config_http_port} \
+        -Dport.https=${config_https_port} \
+        -Dhttps.keystorePassword=${config_https_keystorePassword} \
+        ${debugCommand} \
+        ${config_config_additionalParams}"
     export CATALINA_HOME=$(pwd)
     source bin/catalina.sh run "$CATALINA_OPTS"
     popd > /dev/null || return
